fix(header): add z-index: 10

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -7,6 +7,7 @@
 
   .content {
     position: relative;
+    z-index: 10;
   }
 
   .navigation-panel {
